Fix z-index on logout menu, kebab case the dataset name

--- a/src/components/LoginHeader.css
+++ b/src/components/LoginHeader.css
@@ -52,3 +52,7 @@
   color: #fff !important;
   background-image: none;
 }
+
+.login-header .dropdown-menu {
+  z-index: 1060;
+}
